public/styles.css
body {
  padding: 50px;
  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
  margin: 0px;
  padding: 0px;
}

a {
  color: #00b7ff;
}

.container {
  min-height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 50px 0px 50px 0px;
}
#list-candidates_wrapper {
  padding-left: 30px !important;
  padding-right: 30px !important;
  width: 90vw !important;
}

.dataTables_length {
  display: flex !important;
  justify-content: flex-start !important;
}
.dataTables_filter {
  display: flex !important;
  justify-content: flex-end !important;
}
.heading-row {
  justify-content: center !important;
  padding-top: 20px;
}

.row-list {
  width: auto !important;
}

.fa-edit,
.fa-delete {
  font-size: 15px !important;
}

